Save Experience started

--- a/application/views/layouts/modal/experience.html
+++ b/application/views/layouts/modal/experience.html
@@ -15,7 +15,7 @@
                     <p>Include all details which may be useful to other students.</p>
                     <textarea class="form-control editor" id="details_experience" rows="7"></textarea>
                 </div>
-                <input type="hidden" name="organization_id" value="{echo $organization->id}">
+                <input type="hidden" name="organization_id" value="{echo $organization_id}">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
