--- a/application/views/organizations/organization.html
+++ b/application/views/organizations/organization.html
@@ -22,8 +22,8 @@
                 </div>
                 <hr>
                 <span class="pull-right">
+                    <a href="/organizations/saveExperience/{echo $organization->id}" target="_blank" class="btn btn-info"><i class="fa fa-comments fa-lg"></i> Feedback</a>
                     <a href="https://www.linkedin.com/company/{echo $organization->linkedin_id}" target="_blank" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Linkedin</a>
-                    <!--<button name="follow" value="organization" id="{echo $organization->id}" class="btn btn-info">Follow</button>-->
                 </span>
 
                 <ul class="nav nav-tabs nav-justified" role="tablist" id="myTab">
