Adding new Blog Post active

--- a/application/views/home/blog.html
+++ b/application/views/home/blog.html
@@ -51,7 +51,7 @@
             </form>
         </div>
         
-        <a href="mailto:info@swiftintern.com?Subject=Articles%20for%20Blog" class="btn btn-danger btn-block"><i class="fa fa-envelope fa-lg"></i> Send Articles</a><br>
+        <a href="/home/saveBlogPost" class="btn btn-danger btn-block"><i class="fa fa-envelope fa-lg"></i> Send Articles</a><br>
 
     </div>
 </section>
