--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -79,9 +79,15 @@
                     </form>
                 </div>
 
-                <div class="list-group">
-                    <a href="employer/register" class="list-group-item"><i class="fa fa-user-plus fa-2x"></i> Hire Interns</a>
-                    <a href="students/register" class="list-group-item"><i class="fa fa-briefcase fa-2x"></i> Get Internhsip</a>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-task"></i> Category
+                    </div>
+                    
+                    <div class="list-group">
+                        <a href="/home?location=delhi" class="list-group-item">Internship in Delhi</a>
+                        <a href="/home?location=mumbai" class="list-group-item">Internship in Mumbai</a>
+                    </div>
                 </div>
 
                 <div class="panel panel-default">
