--- a/application/views/home/post.html
+++ b/application/views/home/post.html
@@ -6,8 +6,11 @@
                 <li><a href="/blog">Blog</a></li>
                 <li class="active">{echo $post->title}</li>
             </ol></nav>
-        <article class="col-md-9 panel panel-default col-md-offset-1">
-            <div class="panel-body blog" id="blog">
+        <article class="col-md-10 thumbnail col-md-offset-1">
+            {if($image)}
+            <img src="/home/thumbnails/{echo $image->photo_id}/800/300" alt="{echo $post->title}">
+            {/if}
+            <div class="caption blog" id="blog">
                 {echo $post->content}
             </div>
         </article>
