--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -13,7 +13,7 @@
                     <a href="admin/search?model=application&key=created&sign=like&value={echo $now}" class="list-group-item"><i class="fa fa-fax fa-2x"></i>  Student Applicantions <span class="badge">{echo $applications}</span></a>
                     <a href="admin/search?model=organization&key=created&sign=like&value={echo $now}" class="list-group-item"><i class="fa fa-bank fa-2x"></i>  Organizations <span class="badge">{echo $organizations}</span></a>
                     <a href="admin/search?model=resume&key=created&sign=like&value={echo $now}" class="list-group-item"><i class="fa fa-fax fa-2x"></i>  Resumes <span class="badge">{echo $resumes}</span></a>
-                    <a href="admin/crmManage" class="list-group-item"><i class="fa fa-paper-plane fa-2x"></i>  Leads <span class="badge">{echo $leads}</span></a>
+                    <a href="admin/search?model=lead&key=created&sign=like&value={echo $now}" class="list-group-item"><i class="fa fa-paper-plane fa-2x"></i>  Leads <span class="badge">{echo $leads}</span></a>
                 </div>
             </div>
 
@@ -39,6 +39,7 @@
                     <a href="http://www.slideshare.net/swiftintern" class="list-group-item"><i class="fa fa-slideshare fa-2x"></i>  SlideShare</a>
                     <a href="https://github.com/Swiftintern/Swiftintern/issues" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Submit a Issue</a>
                     <a href="/admin/support" class="list-group-item"><i class="fa fa-ticket fa-2x"></i>  Support Tickets</a>
+                    <a href="admin/search?model=blogpost&key=validity&sign=like&value=0" class="list-group-item"><i class="fa fa-comments fa-2x"></i>Blog Post</a>
                 </div>
             </div>
 
