--- a/application/views/home/saveBlogPost.html
+++ b/application/views/home/saveBlogPost.html
@@ -15,10 +15,15 @@
         {/if}
         {else}
         <div class="col-md-offset-2 col-lg-8">
-            <form class="form-horizontal" method="post" action="">
+            <form class="form-horizontal" method="post" action="" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>Title</label>
                     <input type="text" class="form-control" name="title" required="" value="{$post->title}">
+                </div>
+                <div class="form-group">
+                    <label>Image</label>
+                    <input type="file" class="form-control" name="photo" required="">
+                    <span class="help-text">Must be at least 800x300 pixels</span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Content</label>
