Standard Layout Updated

--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="{echo strip_tags($seo->getKeywords())}">
     <meta name="author" content="{echo $seo->getAuthor()}" />
     <meta name="msvalidate.01" content="B1BCAA5861C00450565B6B8C742070DF" />
-    <meta name="copyright" content="SWIFTDEAL ONLINE LLP 2014">
+    <meta name="copyright" content="SWIFTDEAL ONLINE LLP 2015">
     <meta name="email" content="info[at]swiftintern[dot]com">
     <meta http-equiv="Content-Language" content="en">
     <meta name="Rating" content="General">
@@ -45,13 +45,6 @@
         height : 180
     })
     </script>
-
-    <!-- fav and touch icons -->
-    <link rel="shortcut icon" href="#" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="#" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="#" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="#" />
-    <link rel="apple-touch-icon-precomposed" href="#" />
     
     <!-- facebook -->
     <meta property="og:title" content="{echo $seo->getTitle()}"/>
@@ -67,18 +60,6 @@
     <meta name="twitter:title" content="{echo $seo->getTitle()}">
     <meta name="twitter:description" content="{echo strip_tags($seo->getDescription())}">
     <meta name="twitter:image" content="{echo $seo->getPhoto()}">
-<!-- 
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-#################################################################################################################
-###     If you are the kind of person who reads a source code of a website , you may be a great fit for us.   ### 
-###     Write to us at info@swiftintern.com                                                                   ###
-#################################################################################################################
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
--->
-    
-    <!--[if lt IE 9]>
-    <script src="assets/js/html5shiv.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -141,14 +122,14 @@
                     <li><i class="fa fa-twitter"></i><a href="https://twitter.com/swiftintern" class="whitetext" target="_blank"> Twitter</a></li>
                     <li><i class="fa fa-google-plus"></i><a href="https://plus.google.com/+Swiftinternindia" rel="publisher" class="whitetext" target="_blank"> Google+</a></li>
                     <li><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/company/swiftintern-com" class="whitetext" target="_blank"> LinkedIn</a></li>
-                    <a href="https://plus.google.com/+Swiftinternindia" rel="publisher">Google+</a>
+                    <li><i class="fa fa-github-square"></i><a href="https://github.com/Swiftintern/Swiftintern/" class="whitetext" target="_blank"> Github</a></li>
                 </ul>
                 </nav>
             </div>
         </div>
             <hr>
             <p>
-                <!--<button class="whitetext btn btn-success btn-xs" name="message" value=""><i class="fa fa-comments-o fa-fw"></i> Got a Question?</button>-->
+                <a href="https://github.com/SwiftMVC/SwiftMVC" target="_blank" class="whitetext btn btn-success btn-xs"><i class="fa fa-heart-o fa-fw"></i> Made with SwiftMVC</a>
                 <span class="pull-right">
                     <a href="http://www.swiftdeal.org/" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
                 </span>
@@ -158,12 +139,6 @@
             </p>
         </div>
     </footer>
-
-    <!-- Javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster 
-    <script src="http://tinymce.cachefly.net/4.0/tinymce.min.js"></script>
-    <script>tinymce.init({selector:'textarea'})</script>-->
     
     <script type="text/javascript" src="{echo CDN}plugins/chosen/chosen.jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
