--- a/application/views/admin/data.html
+++ b/application/views/admin/data.html
@@ -9,7 +9,7 @@
                         <option value="answer">Answers</option>
                         <option value="application">Applications</option>
                         <option value="bankaccount">BankAccounts</option>
-                        <option value="blog">BlogPosts</option>
+                        <option value="blogpost">BlogPosts</option>
                         <option value="certificate">Certificates</option>
                         <option value="conversation">Conversations</option>
                         <option value="crm">CRM Templates</option>
