Improved Organization Pagination

--- a/application/views/organizations/index.html
+++ b/application/views/organizations/index.html
@@ -19,9 +19,16 @@
                 </div>
                 {/foreach}
             </div>
-            <div class="text-center">
-                <button id="loadmorebtn" onclick="loadmoreComps(++page, '12');" class="btn btn-primary">Load More</button><hr>
-            </div>
+            <nav class="text-center">
+                <ul class="pager">
+                    {if($page != 1)}
+                    <li><a href="?page={echo $page - 1}">Previous</a></li>
+                    {/if}
+                    {if($page < $count/$limit)}
+                    <li><a href="?page={echo $page + 1}">Next</a></li>
+                    {/if}
+                </ul>
+            </nav>
         </div>
         <aside class="col-xs-12 col-md-3">
             <a href="employer/register" class="btn btn-warning btn-lg btn-block"><i class="fa fa-briefcase fa-lg"></i> Register Company</a><br>
@@ -33,7 +40,7 @@
                     <form id="orgsearch">
                         <div class="form-group">
                             <label>Company</label>
-                            <input type="search" name="orgkeyword" id="orgkeyword" class="form-control" placeholder="Enter Name">
+                            <input type="search" name="name" id="orgkeyword" class="form-control" placeholder="Enter Name">
                             <small class="help-block"></small>
                         </div>
                         <br>
