--- a/application/views/organizations/index.html
+++ b/application/views/organizations/index.html
@@ -7,9 +7,9 @@
 <section class="container">
     <div class="row">
         <div class="col-xs-12 col-md-9">
-            <div class="row masonry-container" id="search_results">
+            <div class="row">
                 {foreach $organization in $organizations}
-                <div class="col-sm-4 col-md-3 item">
+                <div class="col-sm-4 col-md-3">
                     <div class="thumbnail">
                         <img src="/thumbnails/{echo $organization->photo_id}" alt="{echo $organization->name}" width="80">
                         <div class="caption">
@@ -51,15 +51,8 @@
         </aside>
     </div>
 </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.1/masonry.pkgd.min.js"></script>
 <script type="text/javascript">
-    var page = 2;
     $(document).ready(function () {
         $(".navbar").css("margin-bottom", "0px");
-        var container = $(".masonry-container");
-        container.masonry({
-            columnWidth: ".item",
-            itemSelector: ".item"
-        });
     });
 </script>
