--- a/application/views/opportunities/resume_uploader.html
+++ b/application/views/opportunities/resume_uploader.html
@@ -12,21 +12,22 @@
                 </div>
                 <div class="form-group">
                     <label>Email address</label>
-                    <input type="email" name="email" class="form-control" placeholder="Email Address">
+                    <input type="email" name="email" class="form-control" placeholder="Email Address" required="">
                 </div>
                 <div class="form-group">
-                    <label>Phone</label>
+                    <label>Phone (Optional)</label>
                     <input type="tel" name="phone" class="form-control" placeholder="Primary Phone">
                     <span class="help-text">Companies may contact you directly</span>
                 </div>
                 <div class="form-group">
                     <label>Upload Resume(pdf only)</label>
-                    <input type="file" name="file" class="form-control">
+                    <input type="file" name="file" class="form-control" required="">
                     <span class="help-text">Dont have resume? <a href="/resumes" class="btn btn-success btn-xs">Create Resume</a></span>
                 </div>
             </div>
             <div class="modal-footer">
-                <input type="hidden" name="action" value="quick_apply">
+                <input type="hidden" name="quickApply" value="quickApply">
+                <input type="hidden" name="action" value="application">
                 <button type="submit" class="btn btn-primary"><i class="fa fa-check-circle"></i> Apply</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
