Quick Apply Improved

--- a/application/views/opportunities/internship.html
+++ b/application/views/opportunities/internship.html
@@ -47,7 +47,7 @@
                                 </form>
                                 {/if}
                                 {else}
-                                    <a href="/students/settings#resume" class="btn btn-success pull-right"><i class="fa fa-upload fa-lg"></i> Upload Resume</a>
+                                    <button data-toggle="modal" data-target="#resume_uploader" class="btn btn-success pull-right"><i class="fa fa-upload fa-lg"></i> Upload Resume</button>
                                 {/else}
                             {/else}
                         {/if}
