--- a/application/views/opportunities/resume_uploader.html
+++ b/application/views/opportunities/resume_uploader.html
@@ -6,6 +6,7 @@
                 <h3 class="modal-title text-center">Thanks for Applying!!!</h3>
             </div>
             <div class="modal-body">
+                {if(isset($user))}
                 <div class="form-group">
                     <label>Full Name</label>
                     <input type="text" name="name" class="form-control" placeholder="Full Name">
@@ -19,6 +20,7 @@
                     <input type="tel" name="phone" class="form-control" placeholder="Primary Phone">
                     <span class="help-text">Companies may contact you directly</span>
                 </div>
+                {/if}
                 <div class="form-group">
                     <label>Upload Resume(pdf only)</label>
                     <input type="file" name="file" class="form-control" required="">
