--- a/application/views/opportunities/resume_uploader.html
+++ b/application/views/opportunities/resume_uploader.html
@@ -6,7 +6,7 @@
                 <h3 class="modal-title text-center">Thanks for Applying!!!</h3>
             </div>
             <div class="modal-body">
-                {if(isset($user))}
+                {if(!isset($user))}
                 <div class="form-group">
                     <label>Full Name</label>
                     <input type="text" name="name" class="form-control" placeholder="Full Name">
