--- a/application/views/employer/settings.html
+++ b/application/views/employer/settings.html
@@ -7,7 +7,7 @@
             Saved <strong>Successfully!</strong>
         </div>
         {/if}
-        
+
         {if(isset($user->phone))}
         <div class="alert alert-warning alert-dismissible fade in" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
@@ -40,6 +40,29 @@
             <button type="submit" class="btn btn-success pull-right">Save <i class="fa fa-check-circle fa-fw"></i></button>
         </form><br>
 
+        <h3>Account Type</h3>
+        <form class="panel panel-default panel-body" method="post" action="">
+            <div class="radio">
+                <label>
+                    <input type="radio" name="account" value="basic" {if($employer->organization->account == "basic")}checked{/if}>
+                    BASIC
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="account" value="training" {if($employer->organization->account == "training")}checked{/if}>
+                    TRAINING
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="account" value="competition" {if($employer->organization->account == "competition")}checked{/if}>
+                    COMPETITION
+                </label>
+            </div>
+            <input type="hidden" name="action" value="saveAccount">
+            <button type="submit" class="btn btn-success pull-right">Save <i class="fa fa-check-circle fa-fw"></i></button>
+        </form><br>
 
         <h3>Newsletter</h3>
         <ul class="list-group">
