Moved Employer Method

--- a/application/views/layouts/navigation/employer.html
+++ b/application/views/layouts/navigation/employer.html
@@ -54,9 +54,9 @@
             <li>
                 <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> My Internships<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/employer/postinternship">Create</a></li>
-                    <li><a href="/employer/internships">Manage</a></li>
-                    <li><a href="/employer/applicants">Applicants</a></li>
+                    <li><a href="/opportunities/postinternship">Create</a></li>
+                    <li><a href="/opportunities/internships">Manage</a></li>
+                    <li><a href="/opportunities/applicants">Applicants</a></li>
                 </ul>
             </li>
             {if(($employer->organization->account == "training") || ($employer->organization->account == "competition"))}
