--- a/application/views/opportunities/internships.html
+++ b/application/views/opportunities/internships.html
@@ -22,7 +22,7 @@
                             <td>
                                 <button class="btn btn-danger btn-xs"><i class="fa fa-trash"></i></button>&nbsp;
                                 <a href="{echo $meta->meta_value}" target="_blank" class="btn btn-primary btn-xs"><i class="fa fa-linkedin"></i></a>&nbsp;
-                                <a href="/employer/applicants/{$internship->id}" class="btn btn-success btn-xs"><i class="fa fa-fax"></i> Applications </a>&nbsp;
+                                <a href="/opportunities/applicants/{$internship->id}" class="btn btn-success btn-xs"><i class="fa fa-fax"></i> Applications </a>&nbsp;
                                 <a href="/opportunities/editinternship/{$internship->id}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit </a>&nbsp;
                             </td>
                         </tr>
