--- a/application/views/layouts/navigation/employer.html
+++ b/application/views/layouts/navigation/employer.html
@@ -54,18 +54,18 @@
             <li>
                 <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> My Internships<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/opportunities/postinternship">Create</a></li>
-                    <li><a href="/opportunities/internships">Manage</a></li>
-                    <li><a href="/opportunities/applicants">Applicants</a></li>
+                    <li><a href="/internship/post">Create</a></li>
+                    <li><a href="/internship/manage">Manage</a></li>
+                    <li><a href="/internship/applicants">Applicants</a></li>
                 </ul>
             </li>
             {if(($employer->organization->account == "training") || ($employer->organization->account == "competition"))}
             <li>
                 <a href="#"><i class="fa fa-users fa-fw"></i> My Trainings<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/oppotunities/posttraining">Create</a></li>
-                    <li><a href="/oppotunities/trainings">Manage</a></li>
-                    <li><a href="/oppotunities/registerations">Applicants</a></li>
+                    <li><a href="/training/post">Create</a></li>
+                    <li><a href="/training/manage">Manage</a></li>
+                    <li><a href="/training/applicants">Applicants</a></li>
                 </ul>
             </li>
             {/if}
