--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">Get the perfect <strong>Internship and Training</strong> this summer!</h1>
+<h1 class="text-center">Get the perfect <strong>Internship and Training</strong>!</h1>
 <section class="container" id="categories">
     <div class="row">
         <div class="bs-glyphicons">
