Added Quick Apply

--- a/application/views/training/applications.html
+++ b/application/views/training/applications.html
@@ -1,4 +1,4 @@
-{include internship/quick_apply.html}
+{include training/quick_apply.html}
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">{echo $training->title}</h1>
