--- a/application/views/training/details.html
+++ b/application/views/training/details.html
@@ -1,4 +1,4 @@
-{include internship/quick_apply.html}
+{include training/quick_apply.html}
 <section class="container">
     <div class="row">
         <div class="col-xs-12 col-md-9 col-md-offset-1">
